DHLVM2-203: fix packaging popup units use config values

--- a/view/adminhtml/templates/order/packaging/grid_gl.phtml
+++ b/view/adminhtml/templates/order/packaging/grid_gl.phtml
@@ -49,7 +49,7 @@ $viewModel = $block->getData('viewModel');
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Country of Origin')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Dangerous Goods Category')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Tariff Number')) ?></th>
-                    <th class="data-grid-th"><?= $block->escapeHtml(__('Export Description') ?></th>
+                    <th class="data-grid-th"><?= $block->escapeHtml(__('Export Description')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Weight')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Customs Value')) ?></th>
                     <th class="data-grid-th"><?= $block->escapeHtml(__('Qty Ordered')) ?></th>
