DHLVM2-212: fix codingstyle issue, some refactoring

--- a/view/adminhtml/templates/order/packaging/popup_customs_bcs.phtml
+++ b/view/adminhtml/templates/order/packaging/popup_customs_bcs.phtml
@@ -27,7 +27,7 @@
 
 $termOptions = $block->getTermsOfTradeOptions();
 $termsDefaultValue = $block->getTermsOfTradeDefault();
-$addtionalFee = $block->getAddtionalFeeDefault();
+$addtionalFee = $block->getAdditionalFeeDefault();
 $placeOfCommital = $block->getPlaceOfCommitalDefault();
 
 $addtionalFeeDefaultValue = isset($addtionalFee) ? $addtionalFee : 0;
